Fixing the bug where the content overflows the card

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,10 @@
     z-index: 0;
   }
   
-  .card {
+.card {
     z-index: 1;
     position: absolute;
-    height: 70vh;
+    max-height: 100vh;
     width: 35vw;
     background-color: var(--white);
     top: 55%;
